syntax = "proto3";
option java_package = "stream.models.proto.meta";
option java_generate_equals_and_hash = true;
import "ShardGroupMeta.proto";

message ClusterMeta {
  int64 timestamp = 1;
  map<string,ShardGroupMeta> nodes = 2;
}

