syntax = "proto3";
option java_package = "stream.models.proto.meta";
option java_generate_equals_and_hash = true;
import "Topic.proto";

message ShardGroupMeta {
  string groupId = 1;
  repeated RaftPeer peers = 2;
  repeated Partition partitions = 3;
}

message RaftPeer {
  string raftPeerId = 1;
  string address = 2;
}

